--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,10 +3,61 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"></link>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <div class="container-fluid p-3 text-white bg-dark">
+            <header class="d-flex flex-wrap justify-content-center py-3">
+                <nav class="nav justify-content-right">
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-globe-americas"></i> HWI </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-file"></i> Acerca de Team-Task </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-user-plus"></i> Registrarse </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-sign-in-alt"></i> Iniciar Sesión </button> </a>
+                </nav>
+            </header>
+        </div>
+        <div class="container-fluid text-dark" style="background-color: #ff99ff">
+            <div align="center">
+                <br/>
+                <h1 class="display-1"> Bienvenido a Team-Task </h1>
+                <br/>
+                    <table border="0" align="center">
+                        <tr>
+                            <td style="text-align: right;">
+                                <h2> 
+                                <b>
+                                <font color="black">LA MEJOR</font><br/> <font color="purple"><i>HERRAMIENTA</i></font><br/>
+                                <font color="black">PARA UNA MEJOR</font><br/> <font color="blue"><i>ORGANIZACIÓN</i></font> 
+                                </b>
+                                </h2> 
+                            </td>
+                            <td> &nbsp; </td>
+                            <td> &nbsp; </td>
+                            <td> &nbsp; </td>
+                            <td> &nbsp; </td>
+                            <td width="300px">
+                                <div class="shadow mb-5 bg-body rounded">
+                                    <img src="images\TTLogo.png" class="img-fluid rounded"/>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                <br/>
+                <br/>
+            </div>
+        </div>
+        <div class="container">
+            
+        </div>
+        <footer>
+            <hr/>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </h:body>
 </html>
 
