--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"></link>
-        <title>Facelet Title</title>
+        <title>Team-Task</title>
     </h:head>
     <h:body>
         <div class="container-fluid p-3 text-white bg-dark">
@@ -21,7 +21,7 @@
                 </nav>
             </header>
         </div>
-        <div class="container-fluid text-dark" style="background-color: #ff99ff">
+        <div class="container-fluid text-light" style="background-color: #121212">
             <div align="center">
                 <br/>
                 <h1 class="display-1"> Bienvenido a Team-Task </h1>
@@ -31,8 +31,8 @@
                             <td style="text-align: right;">
                                 <h2> 
                                 <b>
-                                <font color="black">LA MEJOR</font><br/> <font color="purple"><i>HERRAMIENTA</i></font><br/>
-                                <font color="black">PARA UNA MEJOR</font><br/> <font color="blue"><i>ORGANIZACIÓN</i></font> 
+                                <font color="white">LA MEJOR</font><br/> <font color="purple"><i>HERRAMIENTA</i></font><br/>
+                                <font color="white">PARA UNA MEJOR</font><br/> <font color="blue"><i>ORGANIZACIÓN</i></font> 
                                 </b>
                                 </h2> 
                             </td>
@@ -41,8 +41,8 @@
                             <td> &nbsp; </td>
                             <td> &nbsp; </td>
                             <td width="300px">
-                                <div class="shadow mb-5 bg-body rounded">
-                                    <img src="images\TTLogo.png" class="img-fluid rounded"/>
+                                <div class="mb-5 bg-body rounded">
+                                    <img src="images\TTLogo.png" class="img-fluid"/>
                                 </div>
                             </td>
                         </tr>
@@ -51,11 +51,40 @@
                 <br/>
             </div>
         </div>
+        <div class="container-fluid p-5 md-5">
+            <div class="card" style="width: 18rem;">
+                <img src="images/hwiL.png" class="card-img-top" alt="..."/>
+                <div class="card-body">
+                  <h5 class="card-title">HWI</h5>
+                  <p class="card-text"> Conozca más sobre nuestra misión, visión y valores en nuestra p&aacute;gina oficial.</p>
+                  <a href="#" class="btn btn-primary">Ir ahora</a>
+                </div>
+            </div>
+        </div>
         <div class="container">
-            
         </div>
         <footer>
-            <hr/>
+            <div class="container-fluid bg-light">
+                <hr/>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <figure class="text-center">
+                                <blockquote class="blockquote">
+                                    <p> <img src="images/indice.png" class="img-fluid" align="middle" width="25%"/> </p>
+                                </blockquote>
+                                <figcaption class="blockquote">
+                                    <h4>Hello World Inc. 2022</h4>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col">
+                          <h5>Contácto:</h5>
+                          <a class="nav-link text-dark" target="_blank" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=incorporationhelloworld@gmail.com&amp;authuser=0"> <i class="fas fa-at"></i> Correo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </h:body>
