--- a/web/Licencias.xhtml
+++ b/web/Licencias.xhtml
@@ -19,8 +19,8 @@ and open the template in the editor.
             <header class="d-flex flex-wrap justify-content-center py-3">
                 <nav class="nav justify-content-right">
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-globe-americas"></i> HWI </button> </a>
-                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
-                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
+                    <a class="nav-link text-white" href="index.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
+                    <a class="nav-link text-white" href="Licencias.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-file"></i> Acerca de Team-Task </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-user-plus"></i> Registrarse </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-sign-in-alt"></i> Iniciar Sesión </button> </a>
@@ -30,8 +30,8 @@ and open the template in the editor.
         <div class="container py-3">
           <header>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-              <h1 class="display-4 fw-normal">Pricing</h1>
-              <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+              <h1 class="display-4 fw-normal">Licencias</h1>
+              <p class="fs-5 text-muted"> Adquiera una de nuestras licencias de paga para obtener algunas ventajas que le serán muy útiles. Al comprar alguna licencia, usted estará contribuyendo al crecimiento y avance de Team-Task y HWI. </p>
             </div>
           </header>
 
@@ -40,110 +40,54 @@ and open the template in the editor.
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                   <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Free</h4>
+                    <h4 class="my-0 fw-normal">Soft</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
+                    <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mes</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li>10 users included</li>
-                      <li>2 GB of storage</li>
-                      <li>Email support</li>
-                      <li>Help center access</li>
+                      <li>Útil para uso personal</li>
+                      <li>Incluye espacio para 20 pizarras</li>
+                      <li>Capacidad colaborativa max. de 10 personas por pizarra</li>
+                      <li>Soporte técnico</li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                    <button type="button" class="w-100 btn btn-lg btn-outline-primary">Licencia predeterminada</button>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                   <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Pro</h4>
+                    <h4 class="my-0 fw-normal">Empresarial</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1>
+                    <h1 class="card-title pricing-card-title">$24.99<small class="text-muted fw-light">/mes</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li>20 users included</li>
-                      <li>10 GB of storage</li>
-                      <li>Priority email support</li>
-                      <li>Help center access</li>
+                      <li>Recomendado para empresas pequeñas</li>
+                      <li>Incluye espacio para 100 pizarras</li>
+                      <li>Capacidad colaborativa max. de 20 personas por pizarra</li>
+                      <li>Soporte técnico</li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                    <button type="button" class="w-100 btn btn-lg btn-primary">Comience ahora</button>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-primary">
                   <div class="card-header py-3 text-white bg-primary border-primary">
-                    <h4 class="my-0 fw-normal">Enterprise</h4>
+                    <h4 class="my-0 fw-normal">X</h4>
                   </div>
                   <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>
+                    <h1 class="card-title pricing-card-title">$99.99<small class="text-muted fw-light">/mes</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li>30 users included</li>
-                      <li>15 GB of storage</li>
-                      <li>Phone and email support</li>
-                      <li>Help center access</li>
+                      <li>Recomendado para grandes empresas</li>
+                      <li>Incluye espacio para 200 pizarras</li>
+                      <li>Capacidad colaborativa max. de 50 personas por pizarra</li>
+                      <li>Soporte técnico inmediato</li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                    <button type="button" class="w-100 btn btn-lg btn-primary">Comience ahora</button>
                   </div>
                 </div>
               </div>
-            </div>
-
-            <h2 class="display-6 text-center mb-4">Compare plans</h2>
-
-            <div class="table-responsive">
-              <table class="table text-center">
-                <thead>
-                  <tr>
-                    <th style="width: 34%;"></th>
-                    <th style="width: 22%;">Free</th>
-                    <th style="width: 22%;">Pro</th>
-                    <th style="width: 22%;">Enterprise</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row" class="text-start">Public</th>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                  <tr>
-                    <th scope="row" class="text-start">Private</th>
-                    <td></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                </tbody>
-
-                <tbody>
-                  <tr>
-                    <th scope="row" class="text-start">Permissions</th>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                  <tr>
-                    <th scope="row" class="text-start">Sharing</th>
-                    <td></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                  <tr>
-                    <th scope="row" class="text-start">Unlimited members</th>
-                    <td></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                  <tr>
-                    <th scope="row" class="text-start">Extra security</th>
-                    <td></td>
-                    <td></td>
-                    <td><svg class="bi" width="24" height="24">X</svg></td>
-                  </tr>
-                </tbody>
-              </table>
             </div>
           </main>   
         </div>
