--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
@@ -13,8 +14,8 @@
             <header class="d-flex flex-wrap justify-content-center py-3">
                 <nav class="nav justify-content-right">
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-globe-americas"></i> HWI </button> </a>
-                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
-                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
+                    <a class="nav-link text-white" href="index.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
+                    <a class="nav-link text-white" href="Licencias.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-file"></i> Acerca de Team-Task </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-user-plus"></i> Registrarse </button> </a>
                     <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-sign-in-alt"></i> Iniciar Sesión </button> </a>
@@ -51,17 +52,39 @@
                 <br/>
             </div>
         </div>
-        <div class="container-fluid p-5 md-5">
-            <div class="card" style="width: 18rem;">
-                <img src="images/hwiL.png" class="card-img-top" alt="..."/>
-                <div class="card-body">
-                  <h5 class="card-title">HWI</h5>
-                  <p class="card-text"> Conozca más sobre nuestra misión, visión y valores en nuestra p&aacute;gina oficial.</p>
-                  <a href="#" class="btn btn-primary">Ir ahora</a>
+        <div class="container p-5 md-5">
+            <div class="row row-cols-1 row-cols-md-3 mb-3">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/hwiL.png" class="card-img-top" alt="..." width="50%"/>
+                        <div class="card-body">
+                          <h5 class="card-title">HWI</h5>
+                          <p class="card-text"> Conozca más sobre nuestra misión, visión y valores en nuestra p&aacute;gina oficial.</p>
+                          <a href="#" class="btn btn-primary">Ir ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/TTlogomin.png" class="card-img-top" alt="..."/>
+                        <div class="card-body">
+                          <h5 class="card-title">Acerca de Team-Task</h5>
+                          <p class="card-text"> Conozca más sobre el desarrollo detrás de Team-Task en nuestra p&aacute;gina oficial.</p>
+                          <a href="#" class="btn btn-primary">Ir ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/Stonks.png" class="card-img-top" alt="..."/>
+                        <div class="card-body">
+                          <h5 class="card-title">Licencias</h5>
+                          <p class="card-text"> Adquiera alguna de nuestras licencias de paga a un precio accesible. </p>
+                          <a href="#" class="btn btn-primary">Ir ahora</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
         </div>
         <footer>
             <div class="container-fluid bg-light">
