--- a/web/Sesion.xhtml
+++ b/web/Sesion.xhtml
@@ -1,13 +1,74 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en"
+    xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui">
+    
     <h:head>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"></link>
+        <title>Team-Task Licencias</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
- 
     <h:body>
-        <p:spinner/>
+        <div class="container-fluid p-3 text-white bg-dark">
+            <header class="d-flex flex-wrap justify-content-center py-3">
+                <nav class="nav justify-content-right">
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-globe-americas"></i> HWI </button> </a>
+                    <a class="nav-link text-white" href="index.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-home"></i> Team-Task </button> </a>
+                    <a class="nav-link text-white" href="Licencias.xhtml"> <button type="button" class="btn btn-dark"> <i class="fas fa-dollar-sign"></i> Licencias </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-file"></i> Acerca de Team-Task </button> </a>
+                    <a class="nav-link text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-user-plus"></i> Registrarse </button> </a>
+                    <a class="nav-link disable text-white" href="#"> <button type="button" class="btn btn-dark"> <i class="fas fa-sign-in-alt"></i> Iniciar Sesión </button> </a>
+                </nav>
+            </header>
+        </div>
+        <div class="container p-5">
+            <h1>Inicie sesión en Team-Task</h1>
+            <br/>
+            <br/>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"/>
+                <label for="floatingInput">Correo Electrónico</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password"/>
+                <label for="floatingPassword">Contraseña de usuario</label>
+            </div>
+            <br/>
+            <button type="button" class="btn btn-primary btn-lg">Iniciar sesión</button>
+            <button type="button" class="btn btn-secondary btn-lg">Limpiar formulario</button>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </div>
+        <footer>
+            <div class="container-fluid bg-light">
+                <hr/>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <figure class="text-center">
+                                <blockquote class="blockquote">
+                                    <p> <img src="images/indice.png" class="img-fluid" align="middle" width="25%"/> </p>
+                                </blockquote>
+                                <figcaption class="blockquote">
+                                    <h4>Hello World Inc. 2022</h4>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col">
+                          <h5>Contácto:</h5>
+                          <a class="nav-link text-dark" target="_blank" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=incorporationhelloworld@gmail.com&amp;authuser=0"> <i class="fas fa-at"></i> Correo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </h:body>
 </html>
